[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version="1.0.210", features=["derive"]}
serde_json = "1.0.128"
url = "2.5.2"
serde_qs = "0.13.0"
bytes = "1.8.0"
chrono = "0.4.38"
async-std ={version="1.13.0", features=["attributes"]}
futures = "0.3.31"

[dependencies.http]
version = "0.1.0"
path = "../http"
